@@ -403,7 +403,7 @@ struct signon {
 #define TYPE_SIGNOFF   4
 #define TYPE_KEEPALIVE 5
 
-#define REVISION "gaim:$Revision: 824 $"
+#define REVISION "gaim:$Revision: 840 $"
 #define FLAPON "FLAPON\r\n\r\n"
 
 #define ROAST "Tic/Toc"
@@ -485,6 +485,7 @@ extern int general_options;
 #define OPT_GEN_USE_OSCAR	0x00040000
 #define OPT_GEN_CTL_CHARS	0x00080000
 #define OPT_GEN_TIK_HACK        0x00100000
+#define OPT_GEN_CTL_SMILEYS     0x00200000
 extern int USE_OSCAR;
 
 extern int display_options;
